fix: collapse css modules text on skills block

--- a/src/components/Skills/Skills.module.scss
+++ b/src/components/Skills/Skills.module.scss
@@ -92,6 +92,13 @@
   text-decoration: none;
   line-height: 0;
 
+  span {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+  }
+
   &:hover {
     span {
       color: $white;
